--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,63 @@
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: local(''),
+       url('./assets/fonts/roboto-300.woff') format('woff'),
+       url('./assets/fonts/roboto-300.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+       url('./assets/fonts/roboto-700.woff') format('woff'),
+       url('./assets/fonts/roboto-700.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+       url('./assets/fonts/open-sans-regular.woff') format('woff'),
+       url('./assets/fonts/open-sans-regular.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  src: local(''),
+       url('./assets/fonts/open-sans-600.woff') format('woff'),
+       url('./assets/fonts/open-sans-600.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+       url('./assets/fonts/open-sans-700.woff') format('woff'),
+       url('./assets/fonts/open-sans-700.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  src: local(''),
+       url('./assets/fonts/montserrat-300.woff') format('woff'),
+       url('./assets/fonts/montserrat-300.woff2') format('woff2');
+  font-display: swap;
+}
+
 body {
   min-width: 1600px;
   margin: 0;
